# xfeed

./: README.md  ROADMAP.md  objectives.md  plan.md  pyproject.toml
scripts/: xfeed-session.sh
skill/: SKILL.md
src/xfeed/: __init__.py  cli.py  config.py  digest.py  fetcher.py  filter.py  links.py  models.py  mosaic.py  reputation.py  scraper.py  session.py  summarizer.py  ticker.py  tone.py
tests/: __init__.py  test_filter.py  test_reputation.py
