[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfeed"
version = "0.1.0"
description = "CLI tool to filter your X timeline based on your interests"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "anthropic>=0.18.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "textual>=0.47.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "browser-cookie3>=0.19.0",
]

[project.scripts]
xfeed = "xfeed.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xfeed"]
